// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`class Node renders correctly by toDot method has some attributes 1`] = `
"\\"test\\" [
  label = \\"this is test\\",
  color = \\"red\\",
];"
`;

exports[`class Node renders correctly by toDot method label attribute behavior html like 1`] = `
"\\"test\\" [
  label = <<B>this is test</B>>,
];"
`;

exports[`class Node renders correctly by toDot method label attribute behavior plain text label to be quoted by double quotation 1`] = `
"\\"test\\" [
  label = \\"this is test\\",
];"
`;

exports[`class Node renders correctly by toDot method simple node 1`] = `"\\"test\\";"`;
